- css: .top opacity fix, was too light for some pictures.

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
     font-size: 25px;
     display: flex;
     padding: 20px;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .bottom {
